--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 before_install:
 - gem install bundler
 before_script:
-- psql -c 'create database paired_be_test;' -U postgres
+- psql -c 'create database whether_sweater_test;' -U postgres
 stages:
   - test
   - name: deploy
