--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,4 +30,10 @@ Metrics/AbcSize:
   Enabled: false
 
 Style/ClassAndModuleChildren:
-  EnforcedStyle: compact
+  Enabled: false
+
+Layout/LineLength:
+  AutoCorrect: true
+
+Layout/MultilineMethodArgumentLineBreaks:
+  Enabled: true
