Add tmp and log directories to gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,15 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore log and temp directories altogether
+/log
+/tmp
+
 # Ignore all logfiles and tempfiles.
-/log/*
-/tmp/*
-!/log/.keep
-!/tmp/.keep
+# /log/*
+# /tmp/*
+# !/log/.keep
+# !/tmp/.keep
 
 # Ignore uploaded files in development.
 /storage/*
